feat: Implement membership expiration handling and transaction processing
- Added MembershipHasExpired event to handle membership expiration notifications.
- Created CheckMembershipStatus job to check and update membership statuses.
- Implemented SendMembershipExpiredNotification listener to notify users of expired memberships.
- Developed MembershipExpiredMail for email notifications regarding expired memberships.
- Introduced TransactionController for handling subscription transactions with Midtrans integration.
- Created Rating model and migration for user ratings on movies.
- Developed Movie and Category controllers for managing movie listings and categories.
- Added views for displaying movies, categories, and handling search functionality.
- Updated routes to include new controllers and endpoints for movie and category management.
- Enhanced frontend with dynamic loading of movies and improved user experience.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "jenssegers/agent": "^2.6",
         "laravel/fortify": "^1.33",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "midtrans/midtrans-php": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
